# Pesquisa

./: .editorconfig  .gitignore  AGENTS.md  CNN.ipynb  CNN_Kfold.ipynb  Dense.ipynb  Dense_Kfold.ipynb  Makefile  README.md  RNN.ipynb  RNN_Kfold.ipynb  SVM.ipynb  feature_importance.ipynb  gerador_pontos.ipynb  gerador_pontos.py  graphTODO.md  graphs.ipynb  kerasTODO.md  pyproject.toml  requirements.txt
BNN/: BNN.ipynb
CNN/: CNN.ipynb  CNN31.ipynb  CNN47.ipynb
Dense/: Dense copy.ipynb  Dense.ipynb  Dense31 (2).ipynb  Dense31.ipynb  Dense47 (2).ipynb  Dense47.ipynb  Dense_Kfold.ipynb
Geradores/: gerador_pontos.ipynb  gerador_pontos.py  gerador_pontos31.py  gerador_pontos47.py
RNN/: RNN.ipynb  RNN31.ipynb  RNN47.ipynb  RNN_Bidirecional.ipynb  RNN_Bidirecional31.ipynb  RNN_Bidirecional47.ipynb  RNN_Kfold.ipynb
Results/: Prelim_results1092_1192.csv  Prelim_results1192_1200.csv  Prelim_results1201_1500.csv  Prelim_results1501_2500.csv  Prelim_results1_1092.csv  Prelim_results2501_3000.csv
SVM/: SVM.ipynb  SVM47.ipynb  svm_feature_importance.py
cosmology/: README.md  __init__.py  generators.py  models.py  parameters.py
input/: data_1.npy  data_10.npy  data_100.npy  data_1000.npy  data_10000.npy  data_1001.npy  data_1002.npy  data_1003.npy  data_1004.npy  data_1005.npy  data_1006.npy  data_1007.npy  data_1008.npy  data_1009.npy  data_101.npy  data_1010.npy  data_1011.npy  data_1012.npy  data_1013.npy  data_1014.npy  data_1015.npy  data_1016.npy  data_1017.npy  data_1018.npy  data_1019.npy  data_102.npy  data_1020.npy  data_1021.npy  data_1022.npy  data_1023.npy  data_1024.npy  data_1025.npy  data_1026.npy  data_1027.npy  data_1028.npy  data_1029.npy  data_103.npy  data_1030.npy  data_1031.npy  data_1032.npy  (+9962 more)
keras_model/: __init__.py  _version.py
keras_model/data/: __init__.py  pipelines.py
keras_model/evaluation/: uncertainty.py
keras_model/experiments/: __init__.py  registry.py  tracker.py
models/: svm.pkl
old codes/: Dense_reg.ipynb  dados_h0.ipynb  results_plotting.ipynb  tpot_boston_pipeline.py  tpot_reg.ipynb
tests/: __init__.py  conftest.py  test_cosmology.py
utils/: README.md  __init__.py  data_loading.py  labels.py  model_utils.py  styles.py  visualization.py
(+24 files in other folders)
