[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmology-dl"
version = "1.0.0"
description = "Deep Learning for Cosmological Data Analysis"
readme = "README.md"
authors = [
    {name = "Guilherme de Souza Ramos Cardoso", email = "guilhermesouza1302@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
    "tensorflow>=2.10.0",
    "tqdm>=4.62.0",
    "joblib>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "papermill>=2.3.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = ["cosmology", "utils"]

[tool.flake8]
max-line-length = 88
max-complexity = 10
extend-ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
]
per-file-ignores = [
    "__init__.py:F401",  # imported but unused in __init__.py
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "notebooks/",
    "scripts/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=cosmology",
    "--cov=utils",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cosmology*", "utils*"]

[tool.setuptools.package-data]
cosmology = ["py.typed"]
utils = ["py.typed"]

[tool.setuptools]
py-modules = []